Add _manifest to product provider
