# openapi.yml
@@ -356,6 +356,13 @@ components:
           $ref: "#/components/schemas/BaseTags"
         _files:
           $ref: "#/components/schemas/BaseRelation"
+        _manifest:
+          type: array
+          description: Manifest ID used to create/update the entity
+          items:
+            type: string
+            format: uuid
+            example: 123e4567-e89b-12d3-a456-426614174000
         __additional:
           type: object
           description: Additional fields that are not part of the schema
